compiler_files/expr.output
Terminals unused in grammar

    READ
    WRITE


State 20 conflicts: 12 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list END

    2 stmt_list: stmt
    3          | stmt_list stmt

    4 stmt: ID ASSIGNOP mapstmt
    5     | ID ASSIGNOP plrstmt
    6     | ID ASSIGNOP gmstmt
    7     | ID ASSIGNOP dstmt
    8     | ID ASSIGNOP estmt
    9     | RUN gmstmt

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER RPAREN
   11        | ID
   12        | mapstmt ADDD dstmt
   13        | mapstmt ADDE estmt

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN
   15        | ID

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA DIGIT RPAREN
   17      | ID

   18 dstmt: DOOR LPAREN DIGIT COMMA DIGIT COMMA CHARACTER RPAREN
   19      | ID

   20 gmstmt: GAME LPAREN DIGIT RPAREN
   21       | ID
   22       | gmstmt ADDM mapstmt
   23       | gmstmt ADDP plrstmt


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    READ (258)
    WRITE (259)
    END (260) 1
    ASSIGNOP (261) 4 5 6 7 8
    COMMA (262) 10 14 16 18
    MAP (263) 10
    PLAYER (264) 14
    GAME (265) 20
    DOOR (266) 18
    ENEMY (267) 16
    ADDM (268) 22
    ADDP (269) 23
    ADDD (270) 12
    ADDE (271) 13
    RUN (272) 9
    ID <id> (273) 4 5 6 7 8 11 15 17 19 21
    DIGIT <val> (274) 10 14 16 18 20
    CHARACTER <val> (275) 10 14 16 18
    LPAREN <val> (276) 10 14 16 18 20
    RPAREN <val> (277) 10 14 16 18 20


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    program (24)
        on left: 1
        on right: 0
    stmt_list (25)
        on left: 2 3
        on right: 1 3
    stmt (26)
        on left: 4 5 6 7 8 9
        on right: 2 3
    mapstmt (27)
        on left: 10 11 12 13
        on right: 4 12 13 22
    plrstmt (28)
        on left: 14 15
        on right: 5 23
    estmt (29)
        on left: 16 17
        on right: 8 13
    dstmt (30)
        on left: 18 19
        on right: 7 12
    gmstmt (31)
        on left: 20 21 22 23
        on right: 6 9 22 23


State 0

    0 $accept: . program $end

    RUN  shift, and go to state 1
    ID   shift, and go to state 2

    program    go to state 3
    stmt_list  go to state 4
    stmt       go to state 5


State 1

    9 stmt: RUN . gmstmt

    GAME  shift, and go to state 6
    ID    shift, and go to state 7

    gmstmt  go to state 8


State 2

    4 stmt: ID . ASSIGNOP mapstmt
    5     | ID . ASSIGNOP plrstmt
    6     | ID . ASSIGNOP gmstmt
    7     | ID . ASSIGNOP dstmt
    8     | ID . ASSIGNOP estmt

    ASSIGNOP  shift, and go to state 9


State 3

    0 $accept: program . $end

    $end  shift, and go to state 10


State 4

    1 program: stmt_list . END
    3 stmt_list: stmt_list . stmt

    END  shift, and go to state 11
    RUN  shift, and go to state 1
    ID   shift, and go to state 2

    stmt  go to state 12


State 5

    2 stmt_list: stmt .

    $default  reduce using rule 2 (stmt_list)


State 6

   20 gmstmt: GAME . LPAREN DIGIT RPAREN

    LPAREN  shift, and go to state 13


State 7

   21 gmstmt: ID .

    $default  reduce using rule 21 (gmstmt)


State 8

    9 stmt: RUN gmstmt .
   22 gmstmt: gmstmt . ADDM mapstmt
   23       | gmstmt . ADDP plrstmt

    ADDM  shift, and go to state 14
    ADDP  shift, and go to state 15

    $default  reduce using rule 9 (stmt)


State 9

    4 stmt: ID ASSIGNOP . mapstmt
    5     | ID ASSIGNOP . plrstmt
    6     | ID ASSIGNOP . gmstmt
    7     | ID ASSIGNOP . dstmt
    8     | ID ASSIGNOP . estmt

    MAP     shift, and go to state 16
    PLAYER  shift, and go to state 17
    GAME    shift, and go to state 6
    DOOR    shift, and go to state 18
    ENEMY   shift, and go to state 19
    ID      shift, and go to state 20

    mapstmt  go to state 21
    plrstmt  go to state 22
    estmt    go to state 23
    dstmt    go to state 24
    gmstmt   go to state 25


State 10

    0 $accept: program $end .

    $default  accept


State 11

    1 program: stmt_list END .

    $default  reduce using rule 1 (program)


State 12

    3 stmt_list: stmt_list stmt .

    $default  reduce using rule 3 (stmt_list)


State 13

   20 gmstmt: GAME LPAREN . DIGIT RPAREN

    DIGIT  shift, and go to state 26


State 14

   22 gmstmt: gmstmt ADDM . mapstmt

    MAP  shift, and go to state 16
    ID   shift, and go to state 27

    mapstmt  go to state 28


State 15

   23 gmstmt: gmstmt ADDP . plrstmt

    PLAYER  shift, and go to state 17
    ID      shift, and go to state 29

    plrstmt  go to state 30


State 16

   10 mapstmt: MAP . LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER RPAREN

    LPAREN  shift, and go to state 31


State 17

   14 plrstmt: PLAYER . LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    LPAREN  shift, and go to state 32


State 18

   18 dstmt: DOOR . LPAREN DIGIT COMMA DIGIT COMMA CHARACTER RPAREN

    LPAREN  shift, and go to state 33


State 19

   16 estmt: ENEMY . LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA DIGIT RPAREN

    LPAREN  shift, and go to state 34


State 20

   11 mapstmt: ID .
   15 plrstmt: ID .
   17 estmt: ID .
   19 dstmt: ID .
   21 gmstmt: ID .

    END       reduce using rule 11 (mapstmt)
    END       [reduce using rule 15 (plrstmt)]
    END       [reduce using rule 17 (estmt)]
    END       [reduce using rule 19 (dstmt)]
    END       [reduce using rule 21 (gmstmt)]
    ADDM      reduce using rule 21 (gmstmt)
    ADDP      reduce using rule 21 (gmstmt)
    RUN       reduce using rule 11 (mapstmt)
    RUN       [reduce using rule 15 (plrstmt)]
    RUN       [reduce using rule 17 (estmt)]
    RUN       [reduce using rule 19 (dstmt)]
    RUN       [reduce using rule 21 (gmstmt)]
    ID        reduce using rule 11 (mapstmt)
    ID        [reduce using rule 15 (plrstmt)]
    ID        [reduce using rule 17 (estmt)]
    ID        [reduce using rule 19 (dstmt)]
    ID        [reduce using rule 21 (gmstmt)]
    $default  reduce using rule 11 (mapstmt)


State 21

    4 stmt: ID ASSIGNOP mapstmt .
   12 mapstmt: mapstmt . ADDD dstmt
   13        | mapstmt . ADDE estmt

    ADDD  shift, and go to state 35
    ADDE  shift, and go to state 36

    $default  reduce using rule 4 (stmt)


State 22

    5 stmt: ID ASSIGNOP plrstmt .

    $default  reduce using rule 5 (stmt)


State 23

    8 stmt: ID ASSIGNOP estmt .

    $default  reduce using rule 8 (stmt)


State 24

    7 stmt: ID ASSIGNOP dstmt .

    $default  reduce using rule 7 (stmt)


State 25

    6 stmt: ID ASSIGNOP gmstmt .
   22 gmstmt: gmstmt . ADDM mapstmt
   23       | gmstmt . ADDP plrstmt

    ADDM  shift, and go to state 14
    ADDP  shift, and go to state 15

    $default  reduce using rule 6 (stmt)


State 26

   20 gmstmt: GAME LPAREN DIGIT . RPAREN

    RPAREN  shift, and go to state 37


State 27

   11 mapstmt: ID .

    $default  reduce using rule 11 (mapstmt)


State 28

   12 mapstmt: mapstmt . ADDD dstmt
   13        | mapstmt . ADDE estmt
   22 gmstmt: gmstmt ADDM mapstmt .

    ADDD  shift, and go to state 35
    ADDE  shift, and go to state 36

    $default  reduce using rule 22 (gmstmt)


State 29

   15 plrstmt: ID .

    $default  reduce using rule 15 (plrstmt)


State 30

   23 gmstmt: gmstmt ADDP plrstmt .

    $default  reduce using rule 23 (gmstmt)


State 31

   10 mapstmt: MAP LPAREN . DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER RPAREN

    DIGIT  shift, and go to state 38


State 32

   14 plrstmt: PLAYER LPAREN . DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    DIGIT  shift, and go to state 39


State 33

   18 dstmt: DOOR LPAREN . DIGIT COMMA DIGIT COMMA CHARACTER RPAREN

    DIGIT  shift, and go to state 40


State 34

   16 estmt: ENEMY LPAREN . DIGIT COMMA DIGIT COMMA CHARACTER COMMA DIGIT RPAREN

    DIGIT  shift, and go to state 41


State 35

   12 mapstmt: mapstmt ADDD . dstmt

    DOOR  shift, and go to state 18
    ID    shift, and go to state 42

    dstmt  go to state 43


State 36

   13 mapstmt: mapstmt ADDE . estmt

    ENEMY  shift, and go to state 19
    ID     shift, and go to state 44

    estmt  go to state 45


State 37

   20 gmstmt: GAME LPAREN DIGIT RPAREN .

    $default  reduce using rule 20 (gmstmt)


State 38

   10 mapstmt: MAP LPAREN DIGIT . COMMA DIGIT COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 46


State 39

   14 plrstmt: PLAYER LPAREN DIGIT . COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 47


State 40

   18 dstmt: DOOR LPAREN DIGIT . COMMA DIGIT COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 48


State 41

   16 estmt: ENEMY LPAREN DIGIT . COMMA DIGIT COMMA CHARACTER COMMA DIGIT RPAREN

    COMMA  shift, and go to state 49


State 42

   19 dstmt: ID .

    $default  reduce using rule 19 (dstmt)


State 43

   12 mapstmt: mapstmt ADDD dstmt .

    $default  reduce using rule 12 (mapstmt)


State 44

   17 estmt: ID .

    $default  reduce using rule 17 (estmt)


State 45

   13 mapstmt: mapstmt ADDE estmt .

    $default  reduce using rule 13 (mapstmt)


State 46

   10 mapstmt: MAP LPAREN DIGIT COMMA . DIGIT COMMA CHARACTER COMMA CHARACTER RPAREN

    DIGIT  shift, and go to state 50


State 47

   14 plrstmt: PLAYER LPAREN DIGIT COMMA . DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    DIGIT  shift, and go to state 51


State 48

   18 dstmt: DOOR LPAREN DIGIT COMMA . DIGIT COMMA CHARACTER RPAREN

    DIGIT  shift, and go to state 52


State 49

   16 estmt: ENEMY LPAREN DIGIT COMMA . DIGIT COMMA CHARACTER COMMA DIGIT RPAREN

    DIGIT  shift, and go to state 53


State 50

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT . COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 54


State 51

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT . COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 55


State 52

   18 dstmt: DOOR LPAREN DIGIT COMMA DIGIT . COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 56


State 53

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT . COMMA CHARACTER COMMA DIGIT RPAREN

    COMMA  shift, and go to state 57


State 54

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT COMMA . CHARACTER COMMA CHARACTER RPAREN

    CHARACTER  shift, and go to state 58


State 55

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA . CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    CHARACTER  shift, and go to state 59


State 56

   18 dstmt: DOOR LPAREN DIGIT COMMA DIGIT COMMA . CHARACTER RPAREN

    CHARACTER  shift, and go to state 60


State 57

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT COMMA . CHARACTER COMMA DIGIT RPAREN

    CHARACTER  shift, and go to state 61


State 58

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT COMMA CHARACTER . COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 62


State 59

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER . COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 63


State 60

   18 dstmt: DOOR LPAREN DIGIT COMMA DIGIT COMMA CHARACTER . RPAREN

    RPAREN  shift, and go to state 64


State 61

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT COMMA CHARACTER . COMMA DIGIT RPAREN

    COMMA  shift, and go to state 65


State 62

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA . CHARACTER RPAREN

    CHARACTER  shift, and go to state 66


State 63

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA . CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    CHARACTER  shift, and go to state 67


State 64

   18 dstmt: DOOR LPAREN DIGIT COMMA DIGIT COMMA CHARACTER RPAREN .

    $default  reduce using rule 18 (dstmt)


State 65

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA . DIGIT RPAREN

    DIGIT  shift, and go to state 68


State 66

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER . RPAREN

    RPAREN  shift, and go to state 69


State 67

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER . COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 70


State 68

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA DIGIT . RPAREN

    RPAREN  shift, and go to state 71


State 69

   10 mapstmt: MAP LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER RPAREN .

    $default  reduce using rule 10 (mapstmt)


State 70

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA . CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN

    CHARACTER  shift, and go to state 72


State 71

   16 estmt: ENEMY LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA DIGIT RPAREN .

    $default  reduce using rule 16 (estmt)


State 72

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER . COMMA CHARACTER COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 73


State 73

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA . CHARACTER COMMA CHARACTER RPAREN

    CHARACTER  shift, and go to state 74


State 74

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER . COMMA CHARACTER RPAREN

    COMMA  shift, and go to state 75


State 75

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA . CHARACTER RPAREN

    CHARACTER  shift, and go to state 76


State 76

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER . RPAREN

    RPAREN  shift, and go to state 77


State 77

   14 plrstmt: PLAYER LPAREN DIGIT COMMA DIGIT COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER COMMA CHARACTER RPAREN .

    $default  reduce using rule 14 (plrstmt)
